Update errors
